# zongrui.org

./: .dev.vars.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
articles-backend/: .env.example  .gitignore  .restic.env.example  README.md  alembic.ini  pyproject.toml
articles-backend/app/: __init__.py  config.py  content.py  database.py  main.py  media.py  models.py  scheduler.py  schemas.py  security.py  seed.py  server.py  services.py  translation.py
articles-backend/app/routers/: admin.py  auth.py  gallery.py  public.py  stats.py
articles-backend/migrations/: env.py
articles-backend/migrations/versions/: 0001_initial.py  0002_article_writing_mode.py  0003_unique_visitor_stats.py  0004_article_content_language.py  0005_public_gallery.py
articles-backend/scripts/: backup.sh  restore-check.sh
articles-backend/systemd/: zongrui-articles-backup.service  zongrui-articles-backup.timer  zongrui-articles-restore-check.service  zongrui-articles-restore-check.timer  zongrui-articles-scheduler.service  zongrui-articles-scheduler.timer  zongrui-articles.service
articles-backend/tests/: conftest.py  test_articles.py  test_auth_oauth.py  test_comments_media.py  test_config_oauth.py  test_gallery.py  test_security.py  test_seed_scheduler.py  test_stats.py  test_translation.py
backend/: README.md  server.py
docs/: articles-edge.md
functions/: [[path]].js  _worker.js
public/: 404.html  _headers  _routes.json  robots.txt  sitemap.xml  theme-init.js
scripts/: export-codex-activity.py  (+1 more)
src/: App.tsx  (+3 more)
(+40 files in other folders)
