[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zongrui-articles"
version = "1.0.0"
description = "Self-hosted article and comment API for zongrui.org"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "bleach>=6.2,<7",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pillow>=11,<13",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.18,<1",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.15,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
